updating baseline example

--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "27e49c93-57d7-4ee9-bb54-623b50e4e87c",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "cecd5ef2-6a34-4752-9899-fc3fe519c3d9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "654ba342-e8d5-480b-9bcc-cd9e226b1122",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "58f2da86-6a32-448d-83a5-ba487e6c54a8",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "2aa2f974-6382-45db-9b8a-bc127873f924",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "90889101-3961-4c23-841c-f6bfb994cee1",
    "metadata": {},
    "outputs": [],
@@ -123,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "6aab1b8e-c3d9-4d0f-a7d4-1a86f1543def",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Expected annual savings: $630.39'"
+       "'Expected annual savings: $627.42'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d697ac84",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
     "    url=REM_ADDRESS_URL,\n",
     "    headers=headers,\n",
     "    params=dict(\n",
-    "        address=address, upgrade=upgrade, heating_fuel=heating_fuel\n",
+    "        address=address, upgrade=\"baseline\", heating_fuel=heating_fuel\n",
     "    )\n",
     ")"
    ]
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "1831a4bd",
    "metadata": {},
    "outputs": [],
@@ -202,17 +202,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "cf88eec5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'energy': {'mean': {'value': 0.0, 'unit': 'gallon'},\n",
+       "  'median': {'value': 0.0, 'unit': 'gallon'},\n",
+       "  'percentile_20': {'value': 0.0, 'unit': 'gallon'},\n",
+       "  'percentile_80': {'value': 0.0, 'unit': 'gallon'}},\n",
+       " 'emissions': {'mean': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "  'median': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "  'percentile_20': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "  'percentile_80': {'value': 0.0, 'unit': 'kgCO2e'}},\n",
+       " 'cost': {'mean': {'value': 0.0, 'unit': '$'},\n",
+       "  'median': {'value': 0.0, 'unit': '$'},\n",
+       "  'percentile_20': {'value': 0.0, 'unit': '$'},\n",
+       "  'percentile_80': {'value': 0.0, 'unit': '$'}}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fuel_results['fuel_oil']['baseline']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5e302eba",
    "metadata": {},
    "outputs": [],
@@ -222,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f32a8ed4",
    "metadata": {},
    "outputs": [],
