Adding REM Baseline Only Notebook (#11)
* Adding baseline notebook with links.

---------

Co-authored-by: Natalie Weires <weires.natalie@gmail.com>

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -12,7 +12,7 @@
     "[Monte Carlo](https://en.wikipedia.org/wiki/Monte_Carlo_method)\n",
     "simulation over a number of theoretical homes that closely\n",
     "resemble the target home and, taken as a whole, \n",
-    "probabalistically represent it. \n",
+    "probabilistically represent it. \n",
     "\n",
     "We do this because we generally don't know everything about each\n",
     "home. We have a large database of home properties\n",
@@ -22,7 +22,7 @@
     "[conditional probability distribution](https://github.com/NREL/resstock/tree/develop/project_national/housing_characteristics) based on the properties\n",
     "that we do know. We then predict the energy consumption for each \n",
     "sample home using a machine learning model, which yields\n",
-    "a distribution of outcomes that probablistically represents the\n",
+    "a distribution of outcomes that probabilistically represents the\n",
     "query home's energy consumption under the baseline and upgrade scenarios.\n",
     "We compute statistics across the this distribution to decide\n",
     "what is likely to happen in the query home.\n",
@@ -40,6 +40,10 @@
     "The purpose of this notebook is to illustrate how those statistics\n",
     "work, describe how they are computed, and discuss how and why\n",
     "they should or should not be used in particular ways.\n",
+    "\n",
+    "To learn more about modeling only baseline\n",
+    "view the [REM Core Demo notebook](https://github.com/rewiringamerica/api_demos/tree/main/notebooks/REM%20Demo).\n",
+    "\n",
     "\n",
     "## Imports and Configuration"
    ]
@@ -245,8 +249,8 @@
    "source": [
     "## Let's look at fuel oil, since that's what we are replacing\n",
     "\n",
-    "It's a fairly big block of nested dictionaries, but we will go through it peice by\n",
-    "peice."
+    "It's a fairly big block of nested dictionaries, but we will go through it piece by\n",
+    "piece."
    ]
   },
   {
