--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "27e49c93-57d7-4ee9-bb54-623b50e4e87c",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "cecd5ef2-6a34-4752-9899-fc3fe519c3d9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "654ba342-e8d5-480b-9bcc-cd9e226b1122",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "58f2da86-6a32-448d-83a5-ba487e6c54a8",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "2aa2f974-6382-45db-9b8a-bc127873f924",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "90889101-3961-4c23-841c-f6bfb994cee1",
    "metadata": {},
    "outputs": [],
@@ -123,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "6aab1b8e-c3d9-4d0f-a7d4-1a86f1543def",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Expected annual savings: $630.39'"
+       "'Expected annual savings: $627.42'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,17 +145,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f962705",
+   "metadata": {},
+   "source": [
+    "## Modeling Only Baseline in REM\n",
+    "\n",
+    "REM typically provides three estimates for a home: one without an upgrade, one with the requested upgrade, and the difference (delta) between them.\n",
+    "For a detailed explanation of these statistics, refer to the [All About REM Statistics notebook](https://github.com/rewiringamerica/api_demos/blob/main/notebooks/All%20About%20REM%20Statistics.ipynb).\n",
+    "\n",
+    "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected data structure.\n",
+    "For each `fuel_type` within `fuel_results`, the `upgrade` and `delta` fields will not be populated. \n",
+    "Requesting `baseline` tells REM to perform estimation without applying any upgrades.\n",
+    "\n",
+    "Performing a request with only `baseline` can be done similarly to other requests."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d697ac84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "headers = {\"Authorization\": f\"Bearer {API_KEY}\"}\n",
+    "\n",
+    "response = requests.get(\n",
+    "    url=REM_ADDRESS_URL,\n",
+    "    headers=headers,\n",
+    "    params=dict(\n",
+    "        address=address, upgrade=\"baseline\", heating_fuel=heating_fuel\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31758a83",
+   "metadata": {},
+   "source": [
+    "### Pull out the results for a baseline request\n",
+    "\n",
+    "We will extract the `fuel_results`, as we have done previously. In the response, `baseline` contains valid values, while `upgrade` and `delta` are null, as expected since no upgrade was applied to the home."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1831a4bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = response.json()\n",
+    "fuel_results = data[\"fuel_results\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cf88eec5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'energy': {'mean': {'value': 0.0, 'unit': 'gallon'},\n",
+       "  'median': {'value': 0.0, 'unit': 'gallon'},\n",
+       "  'percentile_20': {'value': 0.0, 'unit': 'gallon'},\n",
+       "  'percentile_80': {'value': 0.0, 'unit': 'gallon'}},\n",
+       " 'emissions': {'mean': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "  'median': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "  'percentile_20': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "  'percentile_80': {'value': 0.0, 'unit': 'kgCO2e'}},\n",
+       " 'cost': {'mean': {'value': 0.0, 'unit': '$'},\n",
+       "  'median': {'value': 0.0, 'unit': '$'},\n",
+       "  'percentile_20': {'value': 0.0, 'unit': '$'},\n",
+       "  'percentile_80': {'value': 0.0, 'unit': '$'}}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuel_results['fuel_oil']['baseline']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5e302eba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuel_results['fuel_oil']['upgrade']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f32a8ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuel_results['fuel_oil']['delta']"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.11.10)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
