Updates for the demo.

--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -16,18 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "27e49c93-57d7-4ee9-bb54-623b50e4e87c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "cecd5ef2-6a34-4752-9899-fc3fe519c3d9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "654ba342-e8d5-480b-9bcc-cd9e226b1122",
    "metadata": {},
    "outputs": [],
@@ -65,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "58f2da86-6a32-448d-83a5-ba487e6c54a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = '8009 Belmont Ave., Lubbock, TX 79424'\n",
+    "address = \"8009 Belmont Ave., Lubbock, TX 79424\"\n",
     "upgrade = \"hvac__heat_pump_seer24_hspf13\"\n",
-    "heating_fuel = 'natural_gas'"
+    "heating_fuel = \"natural_gas\""
    ]
   },
   {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "2aa2f974-6382-45db-9b8a-bc127873f924",
    "metadata": {},
    "outputs": [],
@@ -95,9 +96,7 @@
     "response = requests.get(\n",
     "    url=REM_ADDRESS_URL,\n",
     "    headers=headers,\n",
-    "    params=dict(\n",
-    "        address=address, upgrade=upgrade, heating_fuel=heating_fuel\n",
-    "    )\n",
+    "    params=dict(address=address, upgrade=upgrade, heating_fuel=heating_fuel),\n",
     ")"
    ]
   },
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "90889101-3961-4c23-841c-f6bfb994cee1",
    "metadata": {},
    "outputs": [],
@@ -123,23 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "6aab1b8e-c3d9-4d0f-a7d4-1a86f1543def",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Expected annual savings: $627.42'"
+       "'Expected annual savings: $659.07'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "annual_savings = -data['fuel_results']['total']['delta']['cost']['mean']['value']\n",
+    "annual_savings = -data[\"fuel_results\"][\"total\"][\"delta\"][\"cost\"][\"mean\"][\"value\"]\n",
     "\n",
     "f\"Expected annual savings: ${annual_savings:.2f}\""
    ]
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d697ac84",
    "metadata": {},
    "outputs": [],
@@ -173,9 +174,7 @@
     "response = requests.get(\n",
     "    url=REM_ADDRESS_URL,\n",
     "    headers=headers,\n",
-    "    params=dict(\n",
-    "        address=address, upgrade=\"baseline\", heating_fuel=heating_fuel\n",
-    "    )\n",
+    "    params=dict(address=address, upgrade=\"baseline\", heating_fuel=heating_fuel),\n",
     ")"
    ]
   },
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "1831a4bd",
    "metadata": {},
    "outputs": [],
@@ -202,60 +201,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "cf88eec5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'energy': {'mean': {'value': 0.0, 'unit': 'gallon'},\n",
-       "  'median': {'value': 0.0, 'unit': 'gallon'},\n",
-       "  'percentile_20': {'value': 0.0, 'unit': 'gallon'},\n",
-       "  'percentile_80': {'value': 0.0, 'unit': 'gallon'}},\n",
-       " 'emissions': {'mean': {'value': 0.0, 'unit': 'kgCO2e'},\n",
-       "  'median': {'value': 0.0, 'unit': 'kgCO2e'},\n",
-       "  'percentile_20': {'value': 0.0, 'unit': 'kgCO2e'},\n",
-       "  'percentile_80': {'value': 0.0, 'unit': 'kgCO2e'}},\n",
-       " 'cost': {'mean': {'value': 0.0, 'unit': '$'},\n",
-       "  'median': {'value': 0.0, 'unit': '$'},\n",
-       "  'percentile_20': {'value': 0.0, 'unit': '$'},\n",
-       "  'percentile_80': {'value': 0.0, 'unit': '$'}}}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fuel_results['fuel_oil']['baseline']"
+    "# Convert the baseline from JSON to a pandas data frame for further\n",
+    "# analysis.\n",
+    "baseline = fuel_results[heating_fuel][\"baseline\"]\n",
+    "\n",
+    "\n",
+    "def stats_df(baseline):\n",
+    "    return pd.DataFrame(\n",
+    "        [\n",
+    "            {\"metric\": metric, \"stat\": stat} | value\n",
+    "            for metric, stats in baseline.items()\n",
+    "            for stat, value in stats.items()\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "stats_df(baseline)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "5e302eba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fuel_results['fuel_oil']['upgrade']"
+    "fuel_results[heating_fuel][\"upgrade\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "f32a8ed4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fuel_results['fuel_oil']['delta']"
+    "fuel_results[heating_fuel][\"delta\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e39346ac-4825-4f21-a1e8-74c004629005",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.11.10)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
