--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "cecd5ef2-6a34-4752-9899-fc3fe519c3d9",
    "metadata": {},
    "outputs": [],
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "58f2da86-6a32-448d-83a5-ba487e6c54a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = '165 Hope St, Providence, RI 02906'\n",
+    "address = \"165 Hope St, Providence, RI 02906\"\n",
     "upgrade = \"hvac__heat_pump_seer18_hspf10\"\n",
-    "heating_fuel = 'fuel_oil'"
+    "heating_fuel = \"fuel_oil\""
    ]
   },
   {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2aa2f974-6382-45db-9b8a-bc127873f924",
    "metadata": {},
    "outputs": [],
@@ -129,15 +129,13 @@
     "response = requests.get(\n",
     "    url=REM_ADDRESS_URL,\n",
     "    headers=headers,\n",
-    "    params=dict(\n",
-    "        address=address, upgrade=upgrade, heating_fuel=heating_fuel\n",
-    "    )\n",
+    "    params=dict(address=address, upgrade=upgrade, heating_fuel=heating_fuel),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "064bddb1-9644-44d3-96de-4d7a070e2772",
    "metadata": {},
    "outputs": [
@@ -147,7 +145,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "90889101-3961-4c23-841c-f6bfb994cee1",
    "metadata": {},
    "outputs": [],
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "048c58b4-7071-4a74-b273-8e877f6240a3",
    "metadata": {},
    "outputs": [],
@@ -188,25 +186,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "053ed56b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'energy': {'mean': {'value': 1605.7854, 'units': 'gallon'},\n",
-       "  'median': {'value': 1522.1593, 'units': 'gallon'},\n",
-       "  'percentile_20': {'value': 1193.7379, 'units': 'gallon'},\n",
-       "  'percentile_80': {'value': 2003.3473, 'units': 'gallon'}},\n",
-       " 'emissions': {'mean': {'value': 19762.2968, 'units': 'kgCO2e'},\n",
-       "  'median': {'value': 18733.1155, 'units': 'kgCO2e'},\n",
-       "  'percentile_20': {'value': 14691.2552, 'units': 'kgCO2e'},\n",
-       "  'percentile_80': {'value': 24655.0653, 'units': 'kgCO2e'}},\n",
-       " 'cost': {'mean': {'value': 6420.6944, 'units': '$'},\n",
-       "  'median': {'value': 6086.3173, 'units': '$'},\n",
-       "  'percentile_20': {'value': 4773.1325, 'units': '$'},\n",
-       "  'percentile_80': {'value': 8010.3361, 'units': '$'}}}"
+       "{'energy': {'mean': {'value': 1639.9717, 'unit': 'gallon'},\n",
+       "  'median': {'value': 1592.8951, 'unit': 'gallon'},\n",
+       "  'percentile_20': {'value': 1217.5114, 'unit': 'gallon'},\n",
+       "  'percentile_80': {'value': 2014.3037, 'unit': 'gallon'}},\n",
+       " 'emissions': {'mean': {'value': 20183.0257, 'unit': 'kgCO2e'},\n",
+       "  'median': {'value': 19603.6575, 'unit': 'kgCO2e'},\n",
+       "  'percentile_20': {'value': 14983.8342, 'unit': 'kgCO2e'},\n",
+       "  'percentile_80': {'value': 24789.9057, 'unit': 'kgCO2e'}},\n",
+       " 'cost': {'mean': {'value': 6557.3876, 'unit': '$'},\n",
+       "  'median': {'value': 6369.1531, 'unit': '$'},\n",
+       "  'percentile_20': {'value': 4868.1902, 'unit': '$'},\n",
+       "  'percentile_80': {'value': 8054.1452, 'unit': '$'}}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuel_results[\"fuel_oil\"][\"baseline\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6bafae54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'electricity': {'value': 0.1241, 'unit': 'kgCO2e/kWh'},\n",
+       " 'natural_gas': {'value': 6.6798, 'unit': 'kgCO2e/therm'},\n",
+       " 'fuel_oil': {'value': 12.3069, 'unit': 'kgCO2e/gallon'},\n",
+       " 'propane': {'value': 7.3776, 'unit': 'kgCO2e/gallon'}}"
       ]
      },
      "execution_count": 10,
@@ -215,31 +237,7 @@
     }
    ],
    "source": [
-    "fuel_results['fuel_oil']['baseline']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "6bafae54",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'electricity': {'value': 0.1241, 'units': 'kgCO2e/kWh'},\n",
-       " 'natural_gas': {'value': 6.6798, 'units': 'kgCO2e/therm'},\n",
-       " 'fuel_oil': {'value': 12.3069, 'units': 'kgCO2e/gallon'},\n",
-       " 'propane': {'value': 7.3776, 'units': 'kgCO2e/gallon'}}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['emissions_factors']"
+    "data[\"emissions_factors\"]"
    ]
   },
   {
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "04ddef09-134c-4734-a932-1d698b268345",
    "metadata": {},
    "outputs": [],
@@ -265,52 +263,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f859af3b-7dd1-45f0-81e5-9377aed86b1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'energy': {'mean': {'value': 1605.7854, 'units': 'gallon'},\n",
-       "   'median': {'value': 1522.1593, 'units': 'gallon'},\n",
-       "   'percentile_20': {'value': 1193.7379, 'units': 'gallon'},\n",
-       "   'percentile_80': {'value': 2003.3473, 'units': 'gallon'}},\n",
-       "  'emissions': {'mean': {'value': 19762.2968, 'units': 'kgCO2e'},\n",
-       "   'median': {'value': 18733.1155, 'units': 'kgCO2e'},\n",
-       "   'percentile_20': {'value': 14691.2552, 'units': 'kgCO2e'},\n",
-       "   'percentile_80': {'value': 24655.0653, 'units': 'kgCO2e'}},\n",
-       "  'cost': {'mean': {'value': 6420.6944, 'units': '$'},\n",
-       "   'median': {'value': 6086.3173, 'units': '$'},\n",
-       "   'percentile_20': {'value': 4773.1325, 'units': '$'},\n",
-       "   'percentile_80': {'value': 8010.3361, 'units': '$'}}},\n",
-       " 'upgrade': {'energy': {'mean': {'value': 66.8082, 'units': 'gallon'},\n",
-       "   'median': {'value': 0.0, 'units': 'gallon'},\n",
-       "   'percentile_20': {'value': 0.0, 'units': 'gallon'},\n",
-       "   'percentile_80': {'value': 135.0306, 'units': 'gallon'}},\n",
-       "  'emissions': {'mean': {'value': 822.2047, 'units': 'kgCO2e'},\n",
-       "   'median': {'value': 0.0, 'units': 'kgCO2e'},\n",
-       "   'percentile_20': {'value': 0.0, 'units': 'kgCO2e'},\n",
-       "   'percentile_80': {'value': 1661.8123, 'units': 'kgCO2e'}},\n",
-       "  'cost': {'mean': {'value': 267.1312, 'units': '$'},\n",
-       "   'median': {'value': 0.0, 'units': '$'},\n",
-       "   'percentile_20': {'value': 0.0, 'units': '$'},\n",
-       "   'percentile_80': {'value': 539.9164, 'units': '$'}}},\n",
-       " 'delta': {'energy': {'mean': {'value': -1538.9771, 'units': 'gallon'},\n",
-       "   'median': {'value': -1448.375, 'units': 'gallon'},\n",
-       "   'percentile_20': {'value': -1936.0537, 'units': 'gallon'},\n",
-       "   'percentile_80': {'value': -1139.4738, 'units': 'gallon'}},\n",
-       "  'emissions': {'mean': {'value': -18940.0921, 'units': 'kgCO2e'},\n",
-       "   'median': {'value': -17825.0574, 'units': 'kgCO2e'},\n",
-       "   'percentile_20': {'value': -23826.8878, 'units': 'kgCO2e'},\n",
-       "   'percentile_80': {'value': -14023.4303, 'units': 'kgCO2e'}},\n",
-       "  'cost': {'mean': {'value': -6153.5632, 'units': '$'},\n",
-       "   'median': {'value': -5791.2928, 'units': '$'},\n",
-       "   'percentile_20': {'value': -7741.2644, 'units': '$'},\n",
-       "   'percentile_80': {'value': -4556.1587, 'units': '$'}}}}"
+       "{'baseline': {'energy': {'mean': {'value': 1639.9717, 'unit': 'gallon'},\n",
+       "   'median': {'value': 1592.8951, 'unit': 'gallon'},\n",
+       "   'percentile_20': {'value': 1217.5114, 'unit': 'gallon'},\n",
+       "   'percentile_80': {'value': 2014.3037, 'unit': 'gallon'}},\n",
+       "  'emissions': {'mean': {'value': 20183.0257, 'unit': 'kgCO2e'},\n",
+       "   'median': {'value': 19603.6575, 'unit': 'kgCO2e'},\n",
+       "   'percentile_20': {'value': 14983.8342, 'unit': 'kgCO2e'},\n",
+       "   'percentile_80': {'value': 24789.9057, 'unit': 'kgCO2e'}},\n",
+       "  'cost': {'mean': {'value': 6557.3876, 'unit': '$'},\n",
+       "   'median': {'value': 6369.1531, 'unit': '$'},\n",
+       "   'percentile_20': {'value': 4868.1902, 'unit': '$'},\n",
+       "   'percentile_80': {'value': 8054.1452, 'unit': '$'}}},\n",
+       " 'upgrade': {'energy': {'mean': {'value': 73.1678, 'unit': 'gallon'},\n",
+       "   'median': {'value': 0.0, 'unit': 'gallon'},\n",
+       "   'percentile_20': {'value': 0.0, 'unit': 'gallon'},\n",
+       "   'percentile_80': {'value': 161.4628, 'unit': 'gallon'}},\n",
+       "  'emissions': {'mean': {'value': 900.471, 'unit': 'kgCO2e'},\n",
+       "   'median': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "   'percentile_20': {'value': 0.0, 'unit': 'kgCO2e'},\n",
+       "   'percentile_80': {'value': 1987.1118, 'unit': 'kgCO2e'}},\n",
+       "  'cost': {'mean': {'value': 292.5596, 'unit': '$'},\n",
+       "   'median': {'value': 0.0, 'unit': '$'},\n",
+       "   'percentile_20': {'value': 0.0, 'unit': '$'},\n",
+       "   'percentile_80': {'value': 645.605, 'unit': '$'}}},\n",
+       " 'delta': {'energy': {'mean': {'value': -1566.8039, 'unit': 'gallon'},\n",
+       "   'median': {'value': -1521.6893, 'unit': 'gallon'},\n",
+       "   'percentile_20': {'value': -1945.3572, 'unit': 'gallon'},\n",
+       "   'percentile_80': {'value': -1122.8551, 'unit': 'gallon'}},\n",
+       "  'emissions': {'mean': {'value': -19282.5547, 'unit': 'kgCO2e'},\n",
+       "   'median': {'value': -18727.3322, 'unit': 'kgCO2e'},\n",
+       "   'percentile_20': {'value': -23941.3851, 'unit': 'kgCO2e'},\n",
+       "   'percentile_80': {'value': -13818.9057, 'unit': 'kgCO2e'}},\n",
+       "  'cost': {'mean': {'value': -6264.828, 'unit': '$'},\n",
+       "   'median': {'value': -6084.4384, 'unit': '$'},\n",
+       "   'percentile_20': {'value': -7778.4641, 'unit': '$'},\n",
+       "   'percentile_80': {'value': -4489.7094, 'unit': '$'}}}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6aab1b8e-c3d9-4d0f-a7d4-1a86f1543def",
    "metadata": {},
    "outputs": [
@@ -343,7 +341,7 @@
        "dict_keys(['baseline', 'upgrade', 'delta'])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,17 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9000390b-3ccf-42dc-b1bd-8df3c67e1a21",
    "metadata": {},
    "outputs": [],
    "source": [
     "def results_for_stat(results, metric, stat: str):\n",
     "    \"\"\"A helper function to pull out subsets of the results.\"\"\"\n",
-    "    return {\n",
-    "        k: results[k][metric][stat]\n",
-    "        for k in result_keys\n",
-    "    }"
+    "    return {k: results[k][metric][stat] for k in result_keys}"
    ]
   },
   {
@@ -389,19 +384,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "8ae5239f-0a6b-4838-aa56-a800a8f69fe2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'value': 1605.7854, 'units': 'gallon'},\n",
-       " 'upgrade': {'value': 66.8082, 'units': 'gallon'},\n",
-       " 'delta': {'value': -1538.9771, 'units': 'gallon'}}"
+       "{'baseline': {'value': 1639.9717, 'unit': 'gallon'},\n",
+       " 'upgrade': {'value': 73.1678, 'unit': 'gallon'},\n",
+       " 'delta': {'value': -1566.8039, 'unit': 'gallon'}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,23 +427,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f4a4ad93-2321-4925-a783-691768f23ce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.0"
+       "0.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(mean_energy['upgrade']['value'] - (mean_energy['baseline']['value'] + mean_energy['delta']['value']), 2)"
+    "round(\n",
+    "    mean_energy[\"upgrade\"][\"value\"]\n",
+    "    - (mean_energy[\"baseline\"][\"value\"] + mean_energy[\"delta\"][\"value\"]),\n",
+    "    2,\n",
+    ")"
    ]
   },
   {
@@ -463,19 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "69e7ded5-6084-4031-906a-5f806b447632",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'value': 1522.1593, 'units': 'gallon'},\n",
-       " 'upgrade': {'value': 0.0, 'units': 'gallon'},\n",
-       " 'delta': {'value': -1448.375, 'units': 'gallon'}}"
+       "{'baseline': {'value': 1592.8951, 'unit': 'gallon'},\n",
+       " 'upgrade': {'value': 0.0, 'unit': 'gallon'},\n",
+       " 'delta': {'value': -1521.6893, 'unit': 'gallon'}}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,17 +498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "e54eb08e-491b-4f2b-83b3-1fd4901941a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'value': 0.0, 'units': 'gallon'}"
+       "{'value': 0.0, 'unit': 'gallon'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,17 +519,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "172e005f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'value': 135.0306, 'units': 'gallon'}"
+       "{'value': 161.4628, 'unit': 'gallon'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "00facc0b-8037-495a-ae24-451017d0fecf",
    "metadata": {},
    "outputs": [],
@@ -561,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "9e391af5-451b-43ef-88fd-572ee62b041c",
    "metadata": {},
    "outputs": [],
@@ -571,19 +570,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "c197ae97-0161-4d3d-8103-13eb9ecdfb5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'value': 20482.2944, 'units': 'kgCO2e'},\n",
-       " 'upgrade': {'value': 4541.7164, 'units': 'kgCO2e'},\n",
-       " 'delta': {'value': -15580.2861, 'units': 'kgCO2e'}}"
+       "{'baseline': {'value': 21423.6426, 'unit': 'kgCO2e'},\n",
+       " 'upgrade': {'value': 4743.954, 'unit': 'kgCO2e'},\n",
+       " 'delta': {'value': -16628.4887, 'unit': 'kgCO2e'}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,23 +604,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "77f9bbef-5c57-405a-a2c6-6f206c7b499c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-360.29"
+       "-51.2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(median_emissions['upgrade']['value'] - (median_emissions['baseline']['value'] + median_emissions['delta']['value']), 2)"
+    "round(\n",
+    "    median_emissions[\"upgrade\"][\"value\"]\n",
+    "    - (median_emissions[\"baseline\"][\"value\"] + median_emissions[\"delta\"][\"value\"]),\n",
+    "    2,\n",
+    ")"
    ]
   },
   {
@@ -661,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
