Updating to health impacts URL at RA's production site.

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d969debb-d64a-46d6-a35e-c4744704981d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: switch back to production URL after V2 is deployed\n",
-    "URL = \"http://127.0.0.1:8080/api/v2/health-impacts/\"\n",
+    "HOST = \"https://api.rewiringamerica.org\"\n",
+    "HEALTH_ADDRESS_URL = f\"{HOST}/api/v2/health-impacts/\"\n",
     "\n",
     "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
    ]
@@ -177,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "25b413d2-b03f-4685-8d40-7aee05f36fd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make the API call:\n",
-    "response = requests.post(URL, json=payload, headers=headers)"
+    "response = requests.post(HEALTH_ADDRESS_URL, json=payload, headers=headers)"
    ]
   },
   {
