reflecting how REM notebooks format the URL

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d969debb-d64a-46d6-a35e-c4744704981d",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "25b413d2-b03f-4685-8d40-7aee05f36fd5",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c0bb2ad4",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
     "    \"upgrade\": [\"hvac__heat_pump_seer18_hspf10\"],\n",
     "}\n",
     "\n",
-    "response_all_states = requests.post(URL, json=payload_all_states, headers=headers)"
+    "response_all_states = requests.post(HEALTH_ADDRESS_URL, json=payload_all_states, headers=headers)"
    ]
   },
   {
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6d25841e",
    "metadata": {},
    "outputs": [],
@@ -1162,7 +1162,7 @@
     "    \"county_fips\": [\"*\"]\n",
     "}\n",
     "\n",
-    "response_nj_counties = requests.post(URL, json=payload_nj_counties, headers=headers)"
+    "response_nj_counties = requests.post(HEALTH_ADDRESS_URL, json=payload_nj_counties, headers=headers)"
    ]
   },
   {
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d9183a7b",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1556,7 @@
     "    \"county_fips\": [\"*\"]\n",
     "}\n",
     "\n",
-    "response_ne_counties = requests.post(URL, json=payload_ne_counties, headers=headers)"
+    "response_ne_counties = requests.post(HEALTH_ADDRESS_URL, json=payload_ne_counties, headers=headers)"
    ]
   },
   {
@@ -2407,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c7254f2d",
    "metadata": {},
    "outputs": [],
@@ -2419,7 +2419,7 @@
     "    \"group_by\": [\"house_size_square_feet_binned\"]\n",
     "}\n",
     "\n",
-    "response_groups = requests.post(URL, json=payload_groups, headers=headers)\n"
+    "response_groups = requests.post(HEALTH_ADDRESS_URL, json=payload_groups, headers=headers)\n"
    ]
   },
   {
