--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -2156,12 +2156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "182dbe37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response_bulk = requests.post(URL, json=payload_bulk, headers=headers)"
+    "response_bulk = requests.post(HEALTH_ADDRESS_URL, json=payload_bulk, headers=headers)"
    ]
   },
   {
