--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -33,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HOST = \"https://api.rewiringamerica.org\"\n",
+    "# HOST = \"https://api.rewiringamerica.org\"\n",
+    "HOST = \"http://127.0.0.1:8000\"\n",
     "REM_ADDRESS_URL = f\"{HOST}/api/v1/rem/address\"\n",
     "\n",
     "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
@@ -157,14 +158,38 @@
     "\n",
     "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected data structure.\n",
     "For each `fuel_type` within `fuel_results`, the `upgrade` and `delta` fields will not be populated. \n",
-    "Requesting `baseline` tells REM to perform estimation without applying any upgrades.\n",
+    "Requesting `baseline` tells REM to perform estimation without applying any upgrades. \n",
+    "If specifically interested in baseline usage, it is recommended to use this request. The `baseline` estimates returned from other upgrade queries\n",
+    "represent the is the usage assuming the home is eligible for the upgrade. To learn more about reasons for this,\n",
+    "view the [All About REM Statistics Notebook](https://github.com/rewiringamerica/api_demos/tree/main/notebooks/REM%20Demo).\n",
+    "\n",
+    "\n",
+    "Performing a request with only `baseline` can be done similarly to other requests.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Modeling Only Baseline in REM\n",
+    "\n",
+    "REM typically provides three estimates for a home: one without an upgrade, one with the requested upgrade, and the difference (delta) between them.\n",
+    "For a detailed explanation of these statistics, refer to the [All About REM Statistics notebook](https://github.com/rewiringamerica/api_demos/blob/main/notebooks/All%20About%20REM%20Statistics.ipynb).\n",
+    "\n",
+    "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected data structure.\n",
+    "For each `fuel_type` within `fuel_results`, the `upgrade` and `delta` fields will not be populated. \n",
+    "Requesting `baseline` tells REM to perform estimation without applying any upgrades. \n",
+    " the baseline values returned for other \\\n",
+    "upgrades may vary slightly because they reflect the home’s baseline conditioned on upgrade eligibility. \\\n",
+    "\n",
+    "\n",
+    "\n",
+    "To learn more about modeling only baseline\n",
+    "view the [REM Core Demo notebook](https://github.com/rewiringamerica/api_demos/tree/main/notebooks/All%20About%20REM%20Statistics).\n",
     "\n",
     "Performing a request with only `baseline` can be done similarly to other requests."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d697ac84",
    "metadata": {},
    "outputs": [],
@@ -190,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1831a4bd",
    "metadata": {},
    "outputs": [],
@@ -201,10 +226,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cf88eec5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>metric</th>\n",
+       "      <th>stat</th>\n",
+       "      <th>value</th>\n",
+       "      <th>unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>818.0488</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>median</td>\n",
+       "      <td>773.5015</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>percentile_20</td>\n",
+       "      <td>558.5560</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>percentile_80</td>\n",
+       "      <td>1023.5165</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>5464.4159</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>median</td>\n",
+       "      <td>5166.8484</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>percentile_20</td>\n",
+       "      <td>3731.0518</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>percentile_80</td>\n",
+       "      <td>6836.9028</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>1297.4921</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>median</td>\n",
+       "      <td>1241.7834</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>percentile_20</td>\n",
+       "      <td>972.9829</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>percentile_80</td>\n",
+       "      <td>1554.4402</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       metric           stat      value    unit\n",
+       "0      energy           mean   818.0488   therm\n",
+       "1      energy         median   773.5015   therm\n",
+       "2      energy  percentile_20   558.5560   therm\n",
+       "3      energy  percentile_80  1023.5165   therm\n",
+       "4   emissions           mean  5464.4159  kgCO2e\n",
+       "5   emissions         median  5166.8484  kgCO2e\n",
+       "6   emissions  percentile_20  3731.0518  kgCO2e\n",
+       "7   emissions  percentile_80  6836.9028  kgCO2e\n",
+       "8        cost           mean  1297.4921       $\n",
+       "9        cost         median  1241.7834       $\n",
+       "10       cost  percentile_20   972.9829       $\n",
+       "11       cost  percentile_80  1554.4402       $"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the baseline from JSON to a pandas data frame for further\n",
     "# analysis.\n",
@@ -226,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5e302eba",
    "metadata": {},
    "outputs": [],
@@ -236,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f32a8ed4",
    "metadata": {},
    "outputs": [],
@@ -245,17 +407,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e39346ac-4825-4f21-a1e8-74c004629005",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Baseline Estimates May Differ Between Different Upgrade Calls\n",
+    "\n",
+    "In certain cases, the samples that are drawn that match the \n",
+    "\n",
+    "\n",
+    "- `sampling_details`: A dictionary with two entries describing the number of samples used in the model. \\\n",
+    "`num_samples` is the total number of samples used in the Monte Carlo estimation process to compute all statistics. \\\n",
+    "`num_ineligible_samples` is number of samples that matched the characteristics of the selected address \\\n",
+    "but did not qualify for the chosen upgrade. For example, a sample would be ineligible for a weatherization upgrade \\\n",
+    "if it already has insulation and air sealing levels that surpass the upgrade thresholds. \\\n",
+    "These ineligible samples are excluded from the statistical calculations. \\\n",
+    "\n",
+    "Within the `fuel_results` subsection for each of the fuel types, there are three components:\n",
+    "  - `baseline`: the annual usage of the fuel before the upgrade across all end uses  \\\n",
+    "(e.g., heating, cooling, water heating, drying, cooking).\n",
+    "  - `upgrade`: the annual usage of the fuel after the upgrade across all end uses.\n",
+    "  - `delta`: the change in usage of the fuel across all end uses.\n",
+    "Note that when upgrade other than `baseline` is passsed, this is the usage assuming the home is \\\n",
+    "eligible for the upgrade; see description of `sampling_details` above.\n",
+    "\n",
+    "\n",
+    "If `baseline` is specified as the upgrade in the request, \\\n",
+    "`fuel_results` will exclude `upgrade` and `delta` since baseline represents the home's \\\n",
+    "current state without any upgrades. As discussed previosuly, the baseline values returned for other \\\n",
+    "upgrades may vary slightly because they reflect the home’s baseline conditioned on upgrade eligibility. \\\n",
+    "Therefore, if specifically interested in baseline usage, it is recommended to use the results returned \\\n",
+    "from passing `baseline` as the upgrade."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a9b8631",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
