cleanup some language

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -359,7 +359,7 @@
    "source": [
     "## Statistics\n",
     "\n",
-    "Now we are going to pull out some statistics for all three. Recall that we are running a Monte Carlo simulation over multiple samples. How many samples will vary from home to home, and we can extract this information."
+    "Now we are going to pull out some statistics for all three. Recall that we are running a Monte Carlo simulation over multiple samples.  The number of samples used will vary from home to home, and we can extract this information."
    ]
   },
   {
@@ -776,7 +776,7 @@
    "id": "8252fa0b",
    "metadata": {},
    "source": [
-    "If we are interested in more general baseline usage over all of these samples, regardless of eligibility for this upgrade, we would want to pass the `baseline` upgrade."
+    "If we are interested in baseline usage more generally over all of these samples, so regardless of eligibility for this upgrade, we would want to request the `baseline` upgrade."
    ]
   },
   {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 105,
    "id": "d74ac6b0",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
    ],
    "source": [
     "baseline_usage = data_baseline['fuel_results']['total']['baseline']['energy']['mean']['value']\n",
-    "print(f\"The expected baseline energy usage is {baseline_usage_assuming_eligibility - baseline_usage:,.0f} kWh lower when including all {data['sampling_details']['num_samples']} samples.\")"
+    "print(f\"The expected baseline energy usage is {baseline_usage_assuming_eligibility - baseline_usage:,.0f} kWh lower when including all {data_baseline['sampling_details']['num_samples']} samples.\")"
    ]
   },
   {
@@ -826,12 +826,12 @@
    "id": "f43f05d6",
    "metadata": {},
    "source": [
-    "For many upgrades, such as `hvac__heat_pump_seer18_hspf10`, all samples will be eligible for the upgrade, in which case the baseline results should be itentical to that of the baseline-specific request. One can always examine the `sampling_details` to understand if the returned baseline estimates are specifically conditioned on eligibility for that upgrade. If we go back to our example from earlier, we can see that all 400 samples were used and that the mean baseline energy usage is the same."
+    "For many upgrades, such as `hvac__heat_pump_seer18_hspf10`, all samples will be eligible for the upgrade, in which case the baseline results should be itentical to that of the baseline-specific request. One can always examine the `sampling_details` to determine if any samples were excluded due to ineligibility. If we go back to our example heat pump example from earlier, we can see that all 400 samples were used and that the mean baseline energy usage is the same."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "id": "e5800fd3",
    "metadata": {},
    "outputs": [
@@ -841,7 +841,7 @@
        "{'num_samples': 400, 'num_ineligible_samples': 0}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "id": "a64eb8ea",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
        "True"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
