Apply suggestions from code review
Co-authored-by: Natalie Weires <weires.natalie@gmail.com>

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -694,7 +694,7 @@
    "id": "b4341688",
    "metadata": {},
    "source": [
-    "The estimates returned for `baseline` usage may vary between calls to different upgrades because the the samples used to calculate all of the statistics are are chosen conditioned on eligibility for the requested upgrade. For example, a sample would be ineligible for a weatherization upgrade like `weatherization__insulation_air_duct_sealing` if it already has insulation and air sealing levels that surpass the upgrade thresholds as described under Measure Package 1 [here](https://oedi-data-lake.s3.amazonaws.com/nrel-pds-building-stock/end-use-load-profiles-for-us-building-stock/2022/EUSS_ResRound1_Technical_Documentation.pdf). These ineligible samples are excluded from the statistical calculations for `baseline`, `upgrade` and `delta`. If we had included these, then the `delta` statistics would  have been taken over lots of samples with delta=0 merely because the upgrade was not applied. Let's look at an example."
+    "The estimates returned for `baseline` usage may vary between calls to different upgrades because the samples used to calculate all of the statistics are chosen conditioned on eligibility for the requested upgrade. For example, a sample would be ineligible for a weatherization upgrade like `weatherization__insulation_air_duct_sealing` if it already has insulation and air sealing levels that surpass the upgrade thresholds as described under Measure Package 1 [here](https://oedi-data-lake.s3.amazonaws.com/nrel-pds-building-stock/end-use-load-profiles-for-us-building-stock/2022/EUSS_ResRound1_Technical_Documentation.pdf). These ineligible samples are excluded from the statistical calculations for `baseline`, `upgrade` and `delta`. If we had included these, then the `delta` statistics would have been taken over lots of samples with delta=0 merely because the upgrade was not applied. Let's look at an example."
    ]
   },
   {
@@ -747,7 +747,7 @@
    "id": "77a60dc5",
    "metadata": {},
    "source": [
-    "This mean is taken over 363 samples, while 37 samples were not included since the level of existing sealing and insulation surpassed the upgrade thresholds. "
+    "This mean is taken over 363 samples. An additional 37 samples were not included since the level of existing sealing and insulation surpassed the upgrade thresholds. "
    ]
   },
   {
