add commited changes

--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -159,30 +159,10 @@
     "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected data structure.\n",
     "For each `fuel_type` within `fuel_results`, the `upgrade` and `delta` fields will not be populated. \n",
     "Requesting `baseline` tells REM to perform estimation without applying any upgrades. \n",
-    "If specifically interested in baseline usage, it is recommended to use this request. The `baseline` estimates returned from other upgrade queries\n",
-    "represent the is the usage assuming the home is eligible for the upgrade. To learn more about reasons for this,\n",
-    "view the [All About REM Statistics Notebook](https://github.com/rewiringamerica/api_demos/tree/main/notebooks/REM%20Demo).\n",
+    "If specifically interested in baseline usage, it is recommended to use this request, since the `baseline` estimates returned from other upgrade queries\n",
+    "represent the usage assuming the home is eligible for the upgrade. To learn more about reasons for this,\n",
+    "refer to the [All About REM Statistics notebook](https://github.com/rewiringamerica/api_demos/blob/main/notebooks/All%20About%20REM%20Statistics.ipynb).\n",
     "\n",
-    "\n",
-    "Performing a request with only `baseline` can be done similarly to other requests.\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Modeling Only Baseline in REM\n",
-    "\n",
-    "REM typically provides three estimates for a home: one without an upgrade, one with the requested upgrade, and the difference (delta) between them.\n",
-    "For a detailed explanation of these statistics, refer to the [All About REM Statistics notebook](https://github.com/rewiringamerica/api_demos/blob/main/notebooks/All%20About%20REM%20Statistics.ipynb).\n",
-    "\n",
-    "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected data structure.\n",
-    "For each `fuel_type` within `fuel_results`, the `upgrade` and `delta` fields will not be populated. \n",
-    "Requesting `baseline` tells REM to perform estimation without applying any upgrades. \n",
-    " the baseline values returned for other \\\n",
-    "upgrades may vary slightly because they reflect the home’s baseline conditioned on upgrade eligibility. \\\n",
-    "\n",
-    "\n",
-    "\n",
-    "To learn more about modeling only baseline\n",
-    "view the [REM Core Demo notebook](https://github.com/rewiringamerica/api_demos/tree/main/notebooks/All%20About%20REM%20Statistics).\n",
     "\n",
     "Performing a request with only `baseline` can be done similarly to other requests."
    ]
@@ -404,40 +384,6 @@
    "outputs": [],
    "source": [
     "fuel_results[heating_fuel][\"delta\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e39346ac-4825-4f21-a1e8-74c004629005",
-   "metadata": {},
-   "source": [
-    "### Baseline Estimates May Differ Between Different Upgrade Calls\n",
-    "\n",
-    "In certain cases, the samples that are drawn that match the \n",
-    "\n",
-    "\n",
-    "- `sampling_details`: A dictionary with two entries describing the number of samples used in the model. \\\n",
-    "`num_samples` is the total number of samples used in the Monte Carlo estimation process to compute all statistics. \\\n",
-    "`num_ineligible_samples` is number of samples that matched the characteristics of the selected address \\\n",
-    "but did not qualify for the chosen upgrade. For example, a sample would be ineligible for a weatherization upgrade \\\n",
-    "if it already has insulation and air sealing levels that surpass the upgrade thresholds. \\\n",
-    "These ineligible samples are excluded from the statistical calculations. \\\n",
-    "\n",
-    "Within the `fuel_results` subsection for each of the fuel types, there are three components:\n",
-    "  - `baseline`: the annual usage of the fuel before the upgrade across all end uses  \\\n",
-    "(e.g., heating, cooling, water heating, drying, cooking).\n",
-    "  - `upgrade`: the annual usage of the fuel after the upgrade across all end uses.\n",
-    "  - `delta`: the change in usage of the fuel across all end uses.\n",
-    "Note that when upgrade other than `baseline` is passsed, this is the usage assuming the home is \\\n",
-    "eligible for the upgrade; see description of `sampling_details` above.\n",
-    "\n",
-    "\n",
-    "If `baseline` is specified as the upgrade in the request, \\\n",
-    "`fuel_results` will exclude `upgrade` and `delta` since baseline represents the home's \\\n",
-    "current state without any upgrades. As discussed previosuly, the baseline values returned for other \\\n",
-    "upgrades may vary slightly because they reflect the home’s baseline conditioned on upgrade eligibility. \\\n",
-    "Therefore, if specifically interested in baseline usage, it is recommended to use the results returned \\\n",
-    "from passing `baseline` as the upgrade."
    ]
   },
   {
